# everything-everywhere-all-at-once

./: .coverage  .env.example  .flake8  .gitignore  CLAUDE.md  README.md  complete_workflow.py  config.yaml.example  coverage.xml  docker-compose.yml  enhancement_refactor_plan.md  main.py  plan_overview.md  pyproject.toml  real_development_workflow_by_id.py  run_full_workflow.py  test-failure-remediation-plan.md
.github/workflows/: ci.yml
agents/: __init__.py  planning_agent.py
config/: base.yaml  development.yaml  production.yaml
config/plugins/: github.yaml  jira.yaml  slack.yaml
core/: __init__.py  agent_context.py  ai_provider.py  archive_manager.py  circuit_breaker.py  code_modifier.py  codebase_scanner.py  config.py  exceptions.py  git_operations.py  notification_manager.py  plugin_interface.py  plugin_registry.py  pr_generator.py  retry_mechanism.py  task_manager.py  variable_resolver.py  workflow_engine.py  workspace_manager.py
docs/: architecture.md  claude_ai_integration_guide.md  deployment.md  getting_started.md  plugin_development.md  plugin_development_examples.md  step_by_step_user_guide.md  user_guide_jira_github_confluence_workflow.md  user_scenario_cmmai48_success_story.md  workflow_guide.md
docs/api/: README.md  projects.md
examples/: config.jira-github.yaml
plans_coding/: phase4_ai_integration_gameplan.md  phase_implementation_analysis.md  vision_success_assessment.md
plugins/: __init__.py  claude_plugin.py  confluence_plugin.py  github.config.yaml  github_plugin.py  jira.config.yaml  jira_plugin.py  slack_plugin.py
plugins/confluence/: __init__.py  api.py  cli.py  config.py  tools.py
plugins/github/: __init__.py  api.py  config.py  tools.py
plugins/jira/: __init__.py  api.py  cli.py  config.py  tools.py
prompts/: code_generation.txt
tests/: __init__.py
tests/integration/: __init__.py  test_ai_workflow_integration.py  test_enhanced_plugins_integration.py  test_plugin_integration.py  test_workflow_integration.py
tests/unit/: __init__.py  test_agent_context.py  test_ai_provider.py  test_circuit_breaker.py  test_claude_plugin.py  test_code_modifier.py  test_codebase_scanner.py  test_confluence_plugin.py  test_git_operations.py  test_github_plugin.py  test_github_plugin_enhanced.py  test_jira_enhanced_basic.py  test_jira_plugin.py  test_jira_plugin_enhanced.py  test_notification_manager.py  test_planning_agent.py  test_pr_generator.py  test_slack_plugin.py  test_task_manager.py  test_variable_resolver.py  test_workflow_engine.py  test_workspace_manager.py
tests/unit/core/: test_exceptions.py  test_plugin_registry.py
tests/unit/plugins/: __init__.py
tests/unit/plugins/github/: __init__.py  test_api.py  test_config.py  test_tools.py
tests/unit/plugins/jira/: __init__.py  test_api.py  test_cli.py  test_config.py  test_tools.py
workflows/: __init__.py  __main__.py  ai_code_generation_test.yaml  complete_workflow.py  enhanced_development_workflow.yaml  real_development_workflow.py  standard_dev_workflow.yaml
